# xlsxgenerator

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: rust.yml
examples/: minimum.json  minimum.yaml  test1.json  test2.json
examples/data/: data1.csv  data1.txt
examples/real-vcf/: canonical.txt.xz
examples/vcf/: simple1-expected-multiallelic-split-snpeff.csv
schema/: xlsxgenerator.json
src/: main.rs
src/generate/: cell.rs  format.rs  insert_csv.rs  insert_vcf.rs  mod.rs  table.rs  test.rs
src/generate/vcf/: mod.rs  tablewriter.rs  test.rs
src/jsonmarker/: mod.rs
src/model/: mod.rs  test.rs
