[package]
name = "xlsxgenerator"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "cargo", "unicode"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
xlsxwriter = "0.6.0"
anyhow = "1"
csv = "1.1.6"
autocompress = "0.6.0"
once_cell = "1.16.0"
vcf = "0.6"
nom = "7"
handlebars = "6.0.0"
